; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_zend_optimizer.c_drop_leading_backslash.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_zend_optimizer.c_drop_leading_backslash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @drop_leading_backslash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @drop_leading_backslash(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i8* @Z_STRVAL_P(i32* %4)
  %6 = getelementptr inbounds i8, i8* %5, i64 0
  %7 = load i8, i8* %6, align 1
  %8 = sext i8 %7 to i32
  %9 = icmp eq i32 %8, 92
  br i1 %9, label %10, label %23

10:                                               ; preds = %1
  %11 = load i32*, i32** %2, align 8
  %12 = call i8* @Z_STRVAL_P(i32* %11)
  %13 = getelementptr inbounds i8, i8* %12, i64 1
  %14 = load i32*, i32** %2, align 8
  %15 = call i64 @Z_STRLEN_P(i32* %14)
  %16 = sub nsw i64 %15, 1
  %17 = call i32* @zend_string_init(i8* %13, i64 %16, i32 0)
  store i32* %17, i32** %3, align 8
  %18 = load i32*, i32** %2, align 8
  %19 = call i32 @zval_ptr_dtor_nogc(i32* %18)
  %20 = load i32*, i32** %2, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @ZVAL_STR(i32* %20, i32* %21)
  br label %23

23:                                               ; preds = %10, %1
  ret void
}

declare dso_local i8* @Z_STRVAL_P(i32*) #1

declare dso_local i32* @zend_string_init(i8*, i64, i32) #1

declare dso_local i64 @Z_STRLEN_P(i32*) #1

declare dso_local i32 @zval_ptr_dtor_nogc(i32*) #1

declare dso_local i32 @ZVAL_STR(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
